# envrax

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish.yml
_extensions/: docstring_polish.py
api/: index.html
api/env/base/: index.html
api/env/batched/: index.html
api/env/multi/: index.html
api/env/vec/: index.html
api/error/: index.html
api/make/: index.html
api/registry/registry/: index.html
api/registry/suite/: index.html
api/spaces/: index.html
api/wrappers/base/: index.html
api/wrappers/helpers/: index.html
api/wrappers/passthrough/: index.html
api/wrappers/stateful/: index.html
api/wrappers/states/: index.html
api/wrappers/types/: index.html
docs/: index.md  license.md
docs/api/: error.md  index.md  make.md  spaces.md
docs/api/env/: base.md  batched.md  multi.md  vec.md
docs/api/registry/: registry.md  suite.md
docs/api/wrappers/: base.md  helpers.md  passthrough.md  stateful.md  states.md  types.md
docs/starting/: index.md
docs/tutorials/: index.md
docs/tutorials/advanced/: custom-spaces.md  custom-wrapper.md
docs/tutorials/essentials/: configuration.md  first-env.md  first-environment.md  make.md  multi-env.md  registry.md  rendering.md  spaces.md  state.md  vectorising.md  wrappers.md
envrax/: __init__.py  _compile.py  base.py  batched_env.py  env.py  envs.py  error.py  make.py  multi_env.py  multi_vec_env.py  registry.py  spaces.py  suite.py  utils.py  vec_env.py
envrax/wrappers/: __init__.py  base.py  clip_reward.py  discount.py  expand_dims.py  frame_stack.py  grayscale.py  jit_wrapper.py  normalize_obs.py  record_episode_statistics.py  record_video.py  resize.py  utils.py  vmap_env.py
license/: index.html
search/: search_index.json
starting/: index.html
tests/: test_base.py  test_batched_env.py  test_jit_wrapper.py  test_make.py  test_multi_env.py  test_multi_vec_env.py  test_registry.py  test_spaces.py  test_utils.py  test_wrappers.py
tutorials/: index.html
tutorials/advanced/custom-spaces/: index.html
tutorials/advanced/custom-wrapper/: index.html
tutorials/essentials/configuration/: index.html
tutorials/essentials/first-env/: index.html
tutorials/essentials/make/: index.html
tutorials/essentials/multi-env/: index.html
tutorials/essentials/registry/: index.html
tutorials/essentials/rendering/: index.html
tutorials/essentials/spaces/: index.html
tutorials/essentials/state/: index.html
(+3 files in other folders)
