[project]
name = "envrax"
version = "0.1.2"
description = "Core JAX-native RL environment framework — base classes, spaces, and wrappers."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = ["chex>=0.1.91", "jax>=0.9.0.1", "tqdm>=4.67.3"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envrax"]

[tool.uv]
exclude-dependencies = ["uvloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv"]
addopts = "-n auto"
filterwarnings = ["ignore::UserWarning:jax", "ignore::UserWarning:jaxlib"]
